@@ -1,5 +1,4 @@
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -21,10 +20,10 @@ public class Bank {
     }
 
     public Bankkonto kontoEroeffnen(String kontonummer, Kunde inhaber) {
+        Bankkonto konto = new Bankkonto(kontonummer, inhaber);
         if (konten.containsKey(kontonummer)) {
             throw new IllegalArgumentException("Diese Kontonummer existiert bereits.");
         }
-        Bankkonto konto = new Bankkonto(kontonummer, inhaber);
         konten.put(kontonummer, konto);
         return konto;
     }
@@ -46,15 +45,11 @@ public class Bank {
     }
 
     public void ueberweisen(String vonKontonummer, String zuKontonummer, long betragInRappen) {
-        if (vonKontonummer.equals(zuKontonummer)) {
-            throw new IllegalArgumentException("Quell- und Zielkonto müssen verschieden sein.");
-        }
-
         Bankkonto quelle = findeKonto(vonKontonummer);
         Bankkonto ziel = findeKonto(zuKontonummer);
-        quelle.belasten(betragInRappen);
-        ziel.gutschreiben(betragInRappen);
-        ueberweisungen.add(new Ueberweisung(vonKontonummer, zuKontonummer, betragInRappen));
+        quelle.ueberweisenAn(ziel, betragInRappen);
+        ueberweisungen.add(new Ueberweisung(
+                quelle.getKontonummer(), ziel.getKontonummer(), betragInRappen));
     }
 
     public List<Bankkonto> getKonten() {
@@ -62,6 +57,6 @@ public class Bank {
     }
 
     public List<Ueberweisung> getUeberweisungen() {
-        return Collections.unmodifiableList(ueberweisungen);
+        return List.copyOf(ueberweisungen);
     }
 }
